k8s-specifications-prod/result-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: result
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: result
        db: "true"
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result:before
        name: result
