k8s-specifications-prod/vote-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vote
        redis: "true"
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote:before
        name: vote
