k8s-specifications-prod/worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
        redis: "true"
        db: "true"
    spec:
      containers:
      - image: dockersamples/examplevotingapp_worker
        name: worker
